# tauri-webdriver

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SPEC.md  TEST_PLAN.md
.github/workflows/: ci.yml
crates/tauri-plugin-webdriver/: Cargo.toml
crates/tauri-plugin-webdriver-automation/: Cargo.toml  build.rs
crates/tauri-plugin-webdriver-automation/permissions/autogenerated/: reference.md
crates/tauri-plugin-webdriver-automation/permissions/autogenerated/commands/: resolve.toml
crates/tauri-plugin-webdriver-automation/permissions/schemas/: schema.json
crates/tauri-plugin-webdriver-automation/src/: init.js  lib.rs  server.rs
crates/tauri-plugin-webdriver/permissions/: default.toml
crates/tauri-plugin-webdriver/permissions/autogenerated/: reference.md
crates/tauri-plugin-webdriver/src/: init.js  lib.rs  server.rs
crates/tauri-webdriver/: Cargo.toml
crates/tauri-webdriver-automation/: Cargo.toml
crates/tauri-webdriver-automation/src/: main.rs
crates/tauri-webdriver/src/: main.rs
scripts/: clean.sh
tests/: run_all_tests.sh  run_plugin_tests.sh  run_w3c_tests.sh
tests/test-app/src/: index.html
tests/test-app/src-tauri/: Cargo.toml  tauri.conf.json
tests/test-app/src-tauri/src/: lib.rs  main.rs
tests/wdio/: package.json  run.sh  wdio.conf.mjs
tests/wdio/specs/: element.spec.mjs  navigation.spec.mjs  screenshot.spec.mjs  script.spec.mjs  smoke.spec.mjs  window.spec.mjs
