[workspace]
resolver = "2"
members = [
    "crates/tauri-plugin-webdriver",
    "crates/tauri-webdriver",
]
exclude = [
    "tests/test-app/src-tauri",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/danielraffel/tauri-webdriver"
rust-version = "1.77"

[workspace.dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
