[package]
name = "tauri-plugin-webdriver-automation"
version = "0.1.2"
description = "Tauri plugin that enables WebDriver-based e2e testing on macOS"
authors = ["Generous Corp"]
links = "tauri-plugin-webdriver-automation"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["tauri", "webdriver", "testing", "automation", "e2e"]
categories = ["development-tools::testing", "gui"]
homepage = "https://github.com/danielraffel/tauri-webdriver"
readme = "../../README.md"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tauri = { version = "2", default-features = false, features = ["wry", "dynamic-acl"] }

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
