[package]
name = "tauri-webdriver-automation"
version = "0.1.2"
description = "Open-source macOS WebDriver server for Tauri apps"
authors = ["Generous Corp"]
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["tauri", "webdriver", "testing", "selenium", "wdio"]
categories = ["development-tools::testing", "command-line-utilities"]
homepage = "https://github.com/danielraffel/tauri-webdriver"
readme = "../../README.md"

[[bin]]
name = "tauri-wd"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4", features = ["derive"] }
