[package]
name = "webdriver-test-app"
version = "0.1.0"
edition = "2021"

[lib]
name = "webdriver_test_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-webdriver = { path = "../../../crates/tauri-plugin-webdriver" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
